--- a/src/main/resources/templates/fragments/adminLayout.html
+++ b/src/main/resources/templates/fragments/adminLayout.html
@@ -24,6 +24,54 @@
 	<link rel="stylesheet" type="text/css" href="static/js/gritter/css/jquery.gritter.css" />
 	<!-- FONTS -->
 	<link href='static/css/css.css' rel='stylesheet' type='text/css'>
+	
+	<!--/PAGE -->
+	<!-- JAVASCRIPTS -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<!-- JQUERY -->
+	<script src="static/js/jquery/jquery-2.0.3.min.js"></script>
+	<!-- JQUERY UI-->
+	<script src="static/js/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
+	<!-- BOOTSTRAP -->
+	<script src="bootstrap-dist/js/bootstrap.min.js"></script>
+	
+		
+	<!-- DATE RANGE PICKER -->
+	<script src="static/js/bootstrap-daterangepicker/moment.min.js"></script>
+	
+	<script src="static/js/bootstrap-daterangepicker/daterangepicker.min.js"></script>
+	<!-- SLIMSCROLL -->
+	<script type="text/javascript" src="static/js/jQuery-slimScroll-1.3.0/jquery.slimscroll.min.js"></script>
+	<!-- SLIMSCROLL -->
+	<script type="text/javascript" src="static/js/jQuery-slimScroll-1.3.0/jquery.slimscroll.min.js"></script><script type="text/javascript" src="static/js/jQuery-slimScroll-1.3.0/slimScrollHorizontal.min.js"></script>
+	<!-- BLOCK UI -->
+	<script type="text/javascript" src="static/js/jQuery-BlockUI/jquery.blockUI.min.js"></script>
+	<!-- SPARKLINES -->
+	<script type="text/javascript" src="static/js/sparklines/jquery.sparkline.min.js"></script>
+	<!-- EASY PIE CHART -->
+	<script src="static/js/jquery-easing/jquery.easing.min.js"></script>
+	<script type="text/javascript" src="static/js/easypiechart/jquery.easypiechart.min.js"></script>
+	<!-- FLOT CHARTS -->
+	<script src="static/js/flot/jquery.flot.min.js"></script>
+	<script src="static/js/flot/jquery.flot.time.min.js"></script>
+    <script src="static/js/flot/jquery.flot.selection.min.js"></script>
+	<script src="static/js/flot/jquery.flot.resize.min.js"></script>
+    <script src="static/js/flot/jquery.flot.pie.min.js"></script>
+    <script src="static/js/flot/jquery.flot.stack.min.js"></script>
+    <script src="static/js/flot/jquery.flot.crosshair.min.js"></script>
+	<!-- TODO -->
+	<script type="text/javascript" src="static/js/jquery-todo/js/paddystodolist.js"></script>
+	<!-- TIMEAGO -->
+	<script type="text/javascript" src="static/js/timeago/jquery.timeago.min.js"></script>
+	<!-- FULL CALENDAR -->
+	<script type="text/javascript" src="static/js/fullcalendar/fullcalendar.min.js"></script>
+	<!-- COOKIE -->
+	<script type="text/javascript" src="static/js/jQuery-Cookie/jquery.cookie.min.js"></script>
+	<!-- GRITTER -->
+	<script type="text/javascript" src="static/js/gritter/js/jquery.gritter.min.js"></script>
+	<!-- CUSTOM SCRIPT -->
+	<script src="static/js/script.js"></script>
+	<script src="static/json2.js"></script>
 </head>
 <body>
 	<!-- HEADER -->
@@ -664,7 +712,7 @@
 								<span class="arrow"></span>
 								</a>
 								<ul class="sub">
-									<li><a class="" href="elements.html"><span class="sub-menu-text">Elements</span></a></li><li><a class="" href="notifications.html"><span class="sub-menu-text">Hubspot Notifications</span></a></li>
+									<li><a class="" href="list.html"><span class="sub-menu-text">paper list</span></a></li><li><a class="" href="notifications.html"><span class="sub-menu-text">Hubspot Notifications</span></a></li>
 									<li><a class="" href="buttons_icons.html"><span class="sub-menu-text">Buttons & Icons</span></a></li>
 									<li><a class="" href="sliders_progress.html"><span class="sub-menu-text">Sliders & Progress</span></a></li>
 									<li><a class="" href="typography.html"><span class="sub-menu-text">Typography</span></a></li>
@@ -818,58 +866,8 @@
 			</div>
 		</div>
 	</section>
-	<!--/PAGE -->
-	<!-- JAVASCRIPTS -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<!-- JQUERY -->
-	<script src="static/js/jquery/jquery-2.0.3.min.js"></script>
-	<!-- JQUERY UI-->
-	<script src="static/js/jquery-ui-1.10.3.custom/js/jquery-ui-1.10.3.custom.min.js"></script>
-	<!-- BOOTSTRAP -->
-	<script src="bootstrap-dist/js/bootstrap.min.js"></script>
 	
-		
-	<!-- DATE RANGE PICKER -->
-	<script src="static/js/bootstrap-daterangepicker/moment.min.js"></script>
 	
-	<script src="static/js/bootstrap-daterangepicker/daterangepicker.min.js"></script>
-	<!-- SLIMSCROLL -->
-	<script type="text/javascript" src="static/js/jQuery-slimScroll-1.3.0/jquery.slimscroll.min.js"></script>
-	<!-- SLIMSCROLL -->
-	<script type="text/javascript" src="static/js/jQuery-slimScroll-1.3.0/jquery.slimscroll.min.js"></script><script type="text/javascript" src="static/js/jQuery-slimScroll-1.3.0/slimScrollHorizontal.min.js"></script>
-	<!-- BLOCK UI -->
-	<script type="text/javascript" src="static/js/jQuery-BlockUI/jquery.blockUI.min.js"></script>
-	<!-- SPARKLINES -->
-	<script type="text/javascript" src="static/js/sparklines/jquery.sparkline.min.js"></script>
-	<!-- EASY PIE CHART -->
-	<script src="static/js/jquery-easing/jquery.easing.min.js"></script>
-	<script type="text/javascript" src="static/js/easypiechart/jquery.easypiechart.min.js"></script>
-	<!-- FLOT CHARTS -->
-	<script src="static/js/flot/jquery.flot.min.js"></script>
-	<script src="static/js/flot/jquery.flot.time.min.js"></script>
-    <script src="static/js/flot/jquery.flot.selection.min.js"></script>
-	<script src="static/js/flot/jquery.flot.resize.min.js"></script>
-    <script src="static/js/flot/jquery.flot.pie.min.js"></script>
-    <script src="static/js/flot/jquery.flot.stack.min.js"></script>
-    <script src="static/js/flot/jquery.flot.crosshair.min.js"></script>
-	<!-- TODO -->
-	<script type="text/javascript" src="static/js/jquery-todo/js/paddystodolist.js"></script>
-	<!-- TIMEAGO -->
-	<script type="text/javascript" src="static/js/timeago/jquery.timeago.min.js"></script>
-	<!-- FULL CALENDAR -->
-	<script type="text/javascript" src="static/js/fullcalendar/fullcalendar.min.js"></script>
-	<!-- COOKIE -->
-	<script type="text/javascript" src="static/js/jQuery-Cookie/jquery.cookie.min.js"></script>
-	<!-- GRITTER -->
-	<script type="text/javascript" src="static/js/gritter/js/jquery.gritter.min.js"></script>
-	<!-- CUSTOM SCRIPT -->
-	<script src="static/js/script.js"></script>
-	<script>
-		jQuery(document).ready(function() {		
-			App.setPage("index");  //Set current page
-			App.init(); //Initialise plugins and elements
-		});
-	</script>
-	<!-- /JAVASCRIPTS -->
+
 </body>
 </html>
