--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,12 @@
            <a href="/tools/editTable2" target="_blank">可编辑表格插件二测试</a>
      </div>
  
-
+    <script>
+		jQuery(document).ready(function() {		
+			App.setPage("index");  //Set current page
+			App.init(); //Initialise plugins and elements
+		});
+	</script>
   </div>
   <!-- 编辑表格 -->
 
