--- a/src/main/resources/templates/paper/createPaper2.html
+++ b/src/main/resources/templates/paper/createPaper2.html
@@ -1,5 +1,7 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+    layout:decorator="fragments/adminLayout">
 
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 
@@ -8,6 +10,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+<div layout:fragment="content" style="width:96%;margin-left:auto;margin-right:auto;">
 
 <script type="text/javascript">
 function addQuestionAndOptions(){
@@ -54,6 +57,9 @@ function addQuestionAndOptions(){
 </div>
 <input type="button" value="保存" onclick="addQuestionAndOptions()" />
 <input type="button" value="下一题" onclick="" />
+
 </form>
+
+</div>
 </body>
 </html>
